# Stage_M1

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt
external_libraries/KaMIS/include/mmwis/: CMakeLists.txt
external_libraries/KaMIS/include/wmis/: CMakeLists.txt
external_libraries/src/KaMIS/: CMakeLists.txt  README.md  test.txt
external_libraries/src/KaMIS/build-mmwis-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
external_libraries/src/KaMIS/build-mmwis-Desktop-Debug/.qtc_clangd/: compile_commands.json
external_libraries/src/KaMIS/build-mmwis-Desktop-Debug/lib/modKaHIPFiles/: Makefile  cmake_install.cmake
external_libraries/src/KaMIS/build-wmis-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
external_libraries/src/KaMIS/build-wmis-Desktop-Debug/.qtc_clangd/: compile_commands.json
external_libraries/src/KaMIS/lib/data_structure/: mis_permutation_online.cpp
external_libraries/src/KaMIS/lib/mis/evolutionary/: reduction_evolution.cpp  separator_pool.cpp  separator_pool.h
external_libraries/src/KaMIS/lib/mis/ils/: ils.cpp  local_search.cpp  local_search_online.cpp  online_ils.cpp
external_libraries/src/KaMIS/lib/mis/kernel/: branch_and_reduce_algorithm.cpp
external_libraries/src/KaMIS/misc/conversion/: anna-sorted.graph  brock200_1-sorted.graph  dimacs_to_metis.py
external_libraries/src/KaMIS/mmwis/: CMakeLists.txt
external_libraries/src/KaMIS/mmwis/lib/modKaHIPFiles/: CMakeLists.txt
external_libraries/src/KaMIS/wmis/: CMakeLists.txt
external_libraries/src/stablesolver/: solution.txt
external_libraries/src/stablesolver/src/build-clique-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
external_libraries/src/stablesolver/src/build-clique-Desktop-Debug/.qtc_clangd/: compile_commands.json
instances/graph_instances/: 1-FullIns_3.graph  1-FullIns_4.graph  1-FullIns_5.graph  1-Insertions_4.graph  1-Insertions_5.graph  1-Insertions_6.graph  2-FullIns_3.graph  2-FullIns_4.graph  2-FullIns_5.graph  2-Insertions_3.graph  2-Insertions_4.graph  2-Insertions_5.graph  3-FullIns_3.graph  3-FullIns_4.graph  3-FullIns_5.graph  3-Insertions_3.graph  3-Insertions_4.graph  3-Insertions_5.graph  4-FullIns_3.graph  4-FullIns_4.graph  4-FullIns_5.graph  4-Insertions_3.graph  4-Insertions_4.graph  5-FullIns_3.graph  5-FullIns_4.graph  C40.9.graph  C500.9.graph  DSJC1000.1.graph  DSJC1000.5.graph  DSJC125.1.graph  DSJC125.1gb.graph  DSJC125.5.graph  DSJC125.5g.graph  DSJC125.9.graph  DSJC125.9gb.graph  DSJC250.1.graph  DSJC250.5.graph  DSJC250.9.graph  DSJC500.1.graph  DSJC500.5.graph  (+209 more)
src/: CMakeLists.txt  instance.hpp  metric.hpp  solution.hpp  solution_manager.hpp  solver_co.hpp  solver_def.hpp
src/solvers/: CMakeLists.txt
src/solvers/graph_solvers/: CMakeLists.txt  graph_solver.hpp  weighted_graph_solver.hpp
src/solvers/graph_solvers/color_vertices/: CMakeLists.txt  color_def.hpp
src/solvers/graph_solvers/color_vertices/vcp/: CMakeLists.txt  solution_vcp.cpp  solution_vcp.hpp  vcp_solver.hpp
src/solvers/graph_solvers/color_vertices/vcp/vcp_solvers/_not_fully_implemented/: ClassicBBSolver.cpp  ClassicBBSolver.hpp  DSATURSolver.cpp  DSATURSolver.hpp
src/solvers/graph_solvers/color_vertices/vcp/vcp_solvers/vcp_colpack/: vcp_colpack.cpp  vcp_colpack.hpp
src/solvers/graph_solvers/color_vertices/vcp/vcp_solvers/vcp_tabu/: tabucol.cpp  tabucol.hpp
src/solvers/graph_solvers/color_vertices/w_vcp/: CMakeLists.txt  solution_w_vcp.cpp  solution_w_vcp.hpp  w_vcp_solver.hpp
src/solvers/graph_solvers/components/: instance_graph.hpp  instance_graph_manager.hpp  instance_graph_provider.hpp  instance_weighted_graph.hpp  instance_weighted_graph_manager.hpp  instance_weighted_graph_provider.hpp
src/solvers/graph_solvers/components/database/: generate_graph_no_db.py  graph_no_db.json
src/solvers/graph_solvers/select_vertices/: CMakeLists.txt
src/solvers/graph_solvers/select_vertices/max_clique/: CMakeLists.txt  max_clique_solver.hpp  solution_max_clique.cpp  solution_max_clique.hpp
src/solvers/graph_solvers/select_vertices/max_clique/clique_solvers/clique_clisat/: clisat_solver.cpp  clisat_solver.hpp
src/solvers/graph_solvers/select_vertices/max_clique/clique_solvers/clique_stablesolver/: clique_stablesolver.cpp  clique_stablesolver.hpp
src/solvers/graph_solvers/select_vertices/mis/: CMakeLists.txt  mis_solver.hpp  solution_mis.cpp  solution_mis.hpp
src/solvers/graph_solvers/select_vertices/mis/mis_solvers/mis_greedy/: min_degree_mis_solver.cpp  min_degree_mis_solver.hpp
src/solvers/graph_solvers/select_vertices/mis/mis_solvers/mis_kamis/: mis_kamis.cpp  mis_kamis.hpp
src/solvers/graph_solvers/select_vertices/mis/mis_solvers/mis_stablesolver/: mis_stablesolver.cpp  mis_stablesolver.hpp
src/solvers/graph_solvers/select_vertices/w_max_clique/: CMakeLists.txt  solution_w_max_clique.cpp  solution_w_max_clique.hpp  w_max_clique_solver.hpp
src/solvers/graph_solvers/select_vertices/w_mis/: CMakeLists.txt  solution_w_mis.cpp  solution_w_mis.hpp  w_mis_solver.hpp
src/solvers/graph_solvers/select_vertices/w_mis/mis_solvers/mis_kamis/: mis_kamis.cpp  mis_kamis.hpp
src/utils/: CMakeLists.txt
src/utils/benchmark/: CMakeLists.txt  benchmark_manager.cpp  benchmark_manager.hpp  benchmark_result.cpp  benchmark_result.hpp  benchmark_visualizer.cpp  benchmark_visualizer.hpp  multi_start_solver.hpp  result.hpp
src/utils/containers/: CMakeLists.txt  dynamic_bitset.hpp
src/utils/graph/: CMakeLists.txt  graph.cpp  graph.hpp  graph_defs.hpp  graph_heavy_no.cpp  graph_heavy_no.hpp  graph_io.hpp  graph_list_adj_no.cpp  graph_list_adj_no.hpp  graph_utils.cpp  graph_utils.hpp  weighted_graph.hpp
src/utils/graphic_python/: boxplot_benchmark.py  performance_profile_benchmark.py
test/: CMakeLists.txt
test/solvers/graph_solvers/: CMakeLists.txt
test/solvers/graph_solvers/mis/: CMakeLists.txt  test.cpp
test/utils/: CMakeLists.txt
test/utils/graph/: CMakeLists.txt  test.cpp
testBin/: Makefile  app.cpp
(+53 files in other folders)
