add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/mis" "${CMAKE_CURRENT_BINARY_DIR}/mis_build")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/max_clique" "${CMAKE_CURRENT_BINARY_DIR}/max_clique_build")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/w_mis" "${CMAKE_CURRENT_BINARY_DIR}/w_mis_build")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/w_max_clique" "${CMAKE_CURRENT_BINARY_DIR}/w_max_clique_build")
